# DroneAnalytics

./: .gitignore  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  pytest.ini  requirements.txt
backend/: Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
configs/: README.md  backend.env  redis.conf
docs/: ACHIEVEMENTS.md  ARCHITECTURE.md  README.md  SECURITY_ANALYSIS.md  TESTS.md  api.yaml  logs_specification.yaml
tests/: Dockerfile  README.md  conftest.py  ex_env.py  pyproject.toml  pytest.ini  requirements.txt
tests/backend/: conftest.py  test_auth.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_backend_config.py  test_logs.py  test_logs_basic.py  test_logs_events.py  test_logs_telemetry.py  test_root.py
tests/endpoints/: conftest.py  test_accounts_get.py  test_auth.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_basic_get.py  test_basic_post.py  test_download_all_get.py  test_download_basic_get.py  test_download_event_get.py  test_download_safety_get.py  test_download_telemetry_get.py  test_event_get.py  test_event_post.py  test_log_get.py  test_log_post.py  test_safety_get.py  test_safety_post.py  test_telemetry_get.py  test_telemetry_post.py  utils.py
tests/proxy/: conftest.py  test_proxy_backend_smoke.py
tests/security_scenario/: conftest.py  report_update.md  test_threat_1_api_key_spoofing.py  test_threat_2_jwt_secret_compromise.py  test_threat_3_log_integrity.py  test_threat_4_xss_infopanel.py  test_threat_5_dos_resilience.py  utils.py
(+65 files in other folders)
