[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "droneanalytics-backend",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
droneanalytics-backend = { path = "../backend", editable = true }
# Настройки pytest
[tool.pytest.ini_options]
# Где искать тесты (относительно папки tests)
testpaths = ["."]
# Имя файлов с тестами
python_files = ["test_*.py", "*_test.py"]
# Имя классов с тестами
python_classes = ["Test*"]
# Имя функций с тестами
python_functions = ["test_*"]

# Добавить папку проекта в PYTHONPATH, чтобы работали импорты из backend
# (если uv add --editable не сработал для импортов)
pythonpath = ["../backend"]

# Параметры по умолчанию для запуска
addopts = [
    "-v",           # Подробный вывод
    "--cov=../backend",  # Покрытие для бэкенда
    "--cov-report=term", # Вывод в терминал
]

# Маркеры (чтобы предупреждения не сыпались)
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
]
